--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -1,8 +1,6 @@
 {{also|CUT|cứt|čut}}
 ==English==
 
-{{rank|real|eye|sun|496|cut|everything|six|comes}}
-
 ===Etymology===
 From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{etyl|sco|-}} {{term|kit||to cut|lang=sco}}), from {{etyl|ang}} *{{term||cyttan|to cut|lang=ang}}, from {{proto|Germanic|kutjanan||kuttanan|to cut|lang=en}}. Akin to {{etyl|non|-}} {{term|kuti||small knife|lang=non}}, Old {{etyl|sv|-}} {{term|kotta||to cut|lang=sv}}, {{is}} {{term|kuta||to cut with a knife|lang=is}}, {{etyl|no|-}} {{term|kutte||to cut|lang=no}}.
 
@@ -486,6 +484,9 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 ====See also====
 * [[copy]]
 * [[paste]]
+
+===Statistics===
+{{rank|real|eye|sun|496|cut|everything|six|comes}}
 
 ===Anagrams===
 * {{alphagram|ctu}}
