--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -1,7 +1,5 @@
 ==English==
 
-{{rank|Lord|de|whole|190|find|got|let|world}}
-
 ===Etymology===
 From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang=en}} (compare Dutch {{term|vinden}}, German {{term|finden}}, Swedish {{term|finna|lang=sv}}), a secondary verb from {{proto|Indo-European|pontHo-}} (compare Old Irish {{term|étain|lang=sga}} 'I find', {{term|áitt|lang=sga}} 'place', Latin {{term|pons|pōns|lang=la}} 'bridge', Ancient Greek ''póntos'' 'sea', Old Armenian {{term|հուն|tr=hun||ford|lang=xcl}}, Avestan {{term|panta|pantā|lang=ae}} (gen. ''paþō''), Sanskrit ''pánthās'' 'path').
 
@@ -168,6 +166,9 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * [[Taos]]: [[thǫ́ne]]
 * Thai: {{t+|th|หา}}
 {{trans-bottom}}
+
+===Statistics===
+{{rank|Lord|de|whole|190|find|got|let|world}}
 
 ===External links===
 * {{R:Webster 1913}}
