--- a/en/圼/圼.12991.wikitext
+++ b/en/圼/圼.12991.wikitext
@@ -14,8 +14,15 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[jī]] ([[ji1]]), [[niè]] ([[nie4]])|wg=chi<sup>1</sup>, nieh<sup>4</sup>}}
+#{{defn|Mandarin|sort=土04}}
 
-# {{defn|Mandarin|sort=土04}}
+----
+
+==Vietnamese==
+===Han character===
+'''圼''' ([[niết]])
+
+[[Category:Vietnamese Hán tự]]
 
 [[fr:圼]]
 [[ko:圼]]
