--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -9,7 +9,7 @@
 * {{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjōn|lang=en}}.  Cognate with Dutch {{term|brug|lang=nl}}, German {{term|Brücke|lang=de}}.
+From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjōn|lang=en}} (cf. West Frisian {{term|brêge|lang=fy}}, Dutch {{term|brug|lang=nl}}, German {{term|Brücke|lang=de}}), from {{proto|Indo-European|bhrēwā}} (cf. Gaulish {{term||bríva}} ‘bridge’, Old Church Slavonic {{term||brŭvŭno}} ‘beam’, {{term||brivno}} ‘log’).
 
 ====Noun====
 [[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]][[Image:Violin_bridge.jpg|thumb|right|The bridge of a violin]]
