--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -63,6 +63,7 @@ From {{etyl|la}} ''[[vomitare]]'', present active infinitive of {{term|vomito|vo
 {{en-noun|-}}
 
 # The [[regurgitate]]d former contents of a [[stomach]].
+# The act of of regurgitating.
 
 ====Synonyms====
 * See also [[Wikisaurus:vomit]].
