--- a/en/昕/昕.16957.wikitext
+++ b/en/昕/昕.16957.wikitext
@@ -46,8 +46,15 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[cǎn]] ([[can3]]), [[xīn]] ([[xin1]])|wg=ts'an<sup>3</sup>, hsin<sup>1</sup>}}
+#{{defn|Mandarin|sort=日04}}
 
-# {{defn|Mandarin|sort=日04}}
+----
+
+==Vietnamese==
+===Han character===
+'''昕''' ([[hân]])
+
+[[Category:Vietnamese Hán tự]]
 
 [[fr:昕]]
 [[ko:昕]]
