--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-from Middle French "''blonde''" (feminine). The masculine form of the word is "''blond''."
+from Middle French "''blonde''" (feminine). The masculine form of the word is [[blond]].
 
 In the English language, it is one of only a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurrence in other languages.
 
