--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -36,6 +36,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * German: {{t+|de|geschnitten}}
 * Hebrew: {{t|he|חתוך|tr=khatúkh}}
 * Portuguese: {{t-|pt|cortado|m}}
+* Spanish: {{t|es|cortado}}
 * Swedish: {{t|sv|klippt}}, {{t|sv|skuren}}
 * Vietnamese: {{t+|vi|cắt|xs=Vietnamese}}
 {{trans-bottom}}
