--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -139,7 +139,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Slovak: {{t-|sk|most|m}}
 * Slovene: {{t+|sl|most|m}}
 * Spanish: {{t+|es|puente|m}}, {{t+|es|bóveda|f}} (''El Salvador'')
-* Swahili: {{t+|sw|daraja|xs=Swahili}},  {{t+|sw|daraja|xs=Swahili}}
+* Swahili: {{t+|sw|daraja|xs=Swahili}}
 * Swedish: {{t+|sv|bro|c}}
 * [[Tahitian]]: [['ē'a turu]]
 * {{trreq|Tamil}}
