--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -181,6 +181,8 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijon|l
 
 # To be on or form the [[border]] of.
 # To move around or along the border of; to avoid the center of.
+#* '''1922''', {{w|Virginia Woolf}}, ''{{w|Jacob's Room}}'' Chapter 1
+#*:An enormous man and woman (it was early-closing day) were stretched motionless, with their heads on pocket-handkerchiefs, side by side, within a few feet of the sea, while two or three gulls gracefully '''skirted''' the incoming waves, and settled near their boots.
 
 ====Related terms====
 * [[skirting-board]]
