--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Etymology===
-{{term|tortue}}, from {{etyl|LL.}} {{term|tartarucha|tartarūcha}}, from {{etyl|LL.}} {{term|tartaruchus|tartarūchus|of Tartarus|lang=la}}, from {{etyl|grc|la}} {{term|sc=Grek|ταρταροῦχος|tr=tartarouchos||from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld.
+{{etyl|enm|en}} {{term|tortuse|lang=enm}}, {{term|tortuce|lang=enm}}, {{term|tortuge|lang=enm}}, from {{etyl|ML.|en}} {{term|tortuca|lang=la}}, possibly from {{etyl|LL.}} {{term|tartarucha|tartarūcha|lang=la}}, from {{etyl|LL.}} {{term|tartaruchus|tartarūchus|of Tartarus|lang=la}}, from {{etyl|grc|en}} {{term|ταρταροῦχος|tr=tartarouchos||lang=grc|from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld; or from {{etyl|la|en}} {{term|tortus||lang=la|twisted}}.
 
 ===Pronunciation===
 * {{audio|en-us-tortoise.ogg|Audio (US)}}
