--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -5,9 +5,9 @@
 * {{audio|en-us-lies.ogg|Audio (US)}}
 
 ===Noun===
-'''lies''' {{p}}
+'''lies'''
 
-# plural of [[lie]]
+# {{plural of|lie}}
 
 ===Verb===
 '''lies'''
@@ -17,7 +17,8 @@
 ===Adjective===
 {{infl|en|adjective}}
 
-# (''Mid-Ulster'') A synonym of 'great' or 'wonderful'. - "''That kebab was lies!''".
+# {{context|Mid-Ulster}} [[great|Great]], [[wonderful]]
+#: {{usex|That kebab was lies!|lang=en}}
 
 ===Anagrams===
 * {{alphagram|eils}}
@@ -45,8 +46,8 @@
 ===Verb===
 {{fr-verb-form}}
 
-# {{form of|[[second-person|Second-person]] [[singular]] [[present indicative]]|[[lier]]|lang=French}}
-# {{form of|Second-person singular [[present subjunctive]]|lier|lang=French}}
+# {{form of|[[second-person|Second-person]] [[singular]] [[present indicative]]|[[lier]]|lang=fr}}
+# {{form of|Second-person singular [[present subjunctive]]|lier|lang=fr}}
 
 ===Anagrams===
 * [[élis#French|élis]], [[îles#French|îles]], [[isle#French|isle]], [[Lise#French|Lise]], [[lise#French|lise]], [[sile#French|sile]], [[silé#French|silé]]
