--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -103,6 +103,7 @@
 * Vietnamese: {{t+|vi|Hoa Kỳ|xs=Vietnamese}}, {{t|vi|Nước Mỹ|xs=Vietnamese}}, {{t|vi|Mỹ Quốc|xs=Vietnamese}} (''short forms''); {{t|vi|Hợp Chủng Quốc Hoa Kỳ|xs=Vietnamese}} (''long form''); {{t-|vi|HK|xs=Vietnamese}} (''abbr.''), {{t+|vi|Mỹ|xs=Vietnamese}} (''abbr.'')
 * [[Volapük]]: {{t|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t|vo|Tats-Pebalöl}}
 * [[Võro]]: [[Ameeriga Ütisriigiq]]
+* Welsh: {{t|cy|Unol Daleithiau America}}
 * [[West Frisian]]: [[Feriene Steaten fan Amearika]]
 * Yiddish: ''short form'': {{t-|yi|פֿאַראייניקטע שטאַטן|p|tr=Fareynikte Shtatn|xs=Yiddish}}
 {{trans-bottom}}
