--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -17,7 +17,8 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 #: {{color panel|F4C430}}
 
 ====Synonyms====
-* {{sense|colour}} [[saffron yellow]]
+saffron is red and comes from a rare frower. also you can use it in rice to flavore it when you use it in rice you swush 
+it and it turns from red to orange to yellow. {{sense|colour}} [[saffron yellow]]
 
 ====Translations====
 {{trans-top|plant}}
