--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -202,6 +202,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-top|the tree}}
 * [[Afrikaans]]: [[pruim]]
 * Armenian: {{t-|hy|սալորենի|tr=saloreni}}
+* [[Basque]]: {{t|eu|aranondo}}
 * Bosnian: {{t-|bs|šljiva|f}}
 * [[Catalan]]: [[pruner]] {{m}}
 * [[Cheyenne]]: {{tø|chy|ma'xemenó'e}}
