--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -102,7 +102,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * [[Interlingua]]: [[parlar]]
 * Irish: {{t|ga|labhair}}
 * Italian: {{t+|it|parlare}}
-* Japanese: {{t+|ja|話す|tr=hanasu}}, {{t-|ja|語る|tr=kataru}}, {{t+|ja|言う|tr=iu}},  {{t+|ja|しゃべる|tr=shaberu}}
+* Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t-|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=[[いう]], iu}},  {{t+|ja|しゃべる|tr=shaberu}}
 * Korean: {{t+|ko|말하다|tr=malhada|sc=Hang}}
 * Latin: {{t+|la|dico|alt=dīcō}},  {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}
 * Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
