--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -21,6 +21,8 @@
 # {{transitive}} To [[pull]] (something) in a given direction, especially without direct contact. {{defdate|from 17th c.}}
 # To perform [[fellatio]]. {{defdate|from 20th c.}}
 # {{intransitive|slang}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
+#* '''1936''', [[w:Curley Howard|The Three Stooges]], ''Movie Maniacs'':
+#*: If at first you don't succeed, keep on '''sucking''' till you do succeed.''
 #* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, pg. 251:
 #*: . . . and it has a few very high points . . . but as a novel, it '''sucks'''.
 
