--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -110,14 +110,16 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 {{trans-bottom}}
 
 {{trans-top|Biblical: name gven to Jacob}}
+* [[Catalan]]: {{t|ca|Israel|m}}
 * Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
 {{trans-mid}}
 * Spanish: {{t+|es|Israel|m}}
 {{trans-bottom}}
 
 {{trans-top|given name}}
-* Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
+* [[Catalan]]: {{t|ca|Israel|m}}
 {{trans-mid}}
+* Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
 {{trans-bottom}}
 
 ===See also===
