--- a/en/惶/惶.15627.wikitext
+++ b/en/惶/惶.15627.wikitext
@@ -44,8 +44,14 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[huáng]] ([[huang2]])|wg=huang<sup>2</sup>}}
+#{{defn|lang=cmn|sort=心09}}
+----
 
-# {{defn|lang=cmn|sort=心09}}
+==Vietnamese==
+===Han character===
+'''惶''' ([[hoàng]])
+
+[[Category:Vietnamese Hán tự]]
 
 [[fr:惶]]
 [[li:惶]]
