--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -240,6 +240,15 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 #: ''I have three diamonds to '''cut''' today.''
 # To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
 #: ''This road '''cuts''' right through downtown.''
+#* {{quote-news
+|year=2011
+|date=January 18
+|author=Daniel Taylor
+|title=Manchester City 4 Leicester City 2
+|work=Guardian Online
+|url=http://www.guardian.co.uk/football/2011/jan/18/manchester-city-leicester-city-fa-cup
+|page=
+|passage=Leicester's response was swift although the referee, Mark Halsey, was generous in the extreme when he awarded the penalty from which Paul Gallagher made it 1-1. Neither Joleon Lescott nor Vieira appeared to make any contact with Dyer as he '''cut''' between them.}}
 # {{cricket}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it.
 # {{informal}} To not [[attend]] a [[class]], especially when not [[permit]]ted.
 #: ''I '''cut''' fifth period to hang out with Angela.''
