--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -48,6 +48,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Ido]]: {{t+|io|konto|xs=Ido}}
 * Italian: {{t-|it|contatore|m}}
 * [[Middle English]]: {{tø|enm|counte}}
+* Navajo: {{tø|nv|nambooígíí}}
 * [[Old French]]: {{tø|fro|conte}}
 * Romanian: [[numărare]] {{f}}
 * Russian: {{t+|ru|счёт}}
