--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -14,10 +14,8 @@ See {{term|spell#Etymology_2|spell}}
 '''spelt'''
 
 # {{chiefly|British}} {{past of|[[spell#Verb|spell]]}}
-
-=====Quotations=====
-* '''1590''', {{w|William Shakespeare}}, ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
-*: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
+#* '''1590''', {{w|William Shakespeare}}, ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
+#*: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ===Etymology 2===
 From {{etyl|enm}}, from {{etyl|ang}} {{term|spelt||spelt, corn|lang=ang}}, from {{etyl|osx}} {{term|spelta||spelt|lang=osx}}; or from {{etyl|LL.}} {{term|spelta||spelt|lang=la}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||spelta|spelt|lang=frk}}; all from {{proto|Germanic|spiltō||spiltaz|spelt|lang=en}}, from {{proto|Indo-European|(s)pelbh-||(s)pelbh-t-|spelt, spelt meal|lang=en}}. Cognate with {{etyl|goh|-}} {{term|spelza||spelt|lang=goh}}, Modern {{etyl|de|-}} {{term|Spelz||wheat-like cereal|lang=de}}, {{etyl|nl|-}} {{term|spelt||spelt|lang=nl}}.
