--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -3,12 +3,12 @@
 ===Pronunciation===
 * {{enPR|kăch}}, {{IPA|/kætʃ/|/kɛtʃ/}}, {{SAMPA|/k{tS/|/kEtS/}}
 * {{audio|en-us-catch.ogg|Audio (US)}}
-*: {{rhymes|ætʃ}}, {{rhymes|ɛtʃ}}
+* {{rhymes|ætʃ}}, {{rhymes|ɛtʃ}}
 
 The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but has become the stressed pronunciation as well in many dialects.
 
 ===Etymology===
-From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la|en}} {{term|capto|captare|lang=la}}.  Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}}, [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
+From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}}, [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
 
 ===Noun===
 {{en-noun|es|-}}
@@ -18,7 +18,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 # {{countable}} The act of catching an [[object]] in motion, especially a [[ball]]. {{jump|catching a ball|s|t}}
 #: ''The player made an impressive '''catch'''.''
 #: ''Nice '''catch'''!''
-# {{countable}} The act of noticing, [[understand]]ing or hearing.  {{jump|act of noticing|s|t}}
+# {{countable}} The act of noticing, [[understand]]ing or hearing. {{jump|act of noticing|s|t}}
 #: ''Good '''catch'''. I never would have remembered that.''
 # {{uncountable}} The game of catching a ball. {{jump|ball game|t}}
 #: ''The kids love to play '''catch'''.''
@@ -88,8 +88,8 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 
 ====Translations====
 {{trans-top|the act of catching a ball {{jump|t|catching a ball|s}} }}
-* Bulgarian: {{t|bg|хващане|n}},  {{t|bg|улавяне|n}}
-* Dutch: {{t-|nl|opvangen}},  {{t+|nl|vangen}}
+* Bulgarian: {{t|bg|хващане|n}}, {{t|bg|улавяне|n}}
+* Dutch: {{t-|nl|opvangen}}, {{t+|nl|vangen}}
 * [[Ewe]]: [[xe]]
 * Finnish: {{t-|fi|koppi}}
 * German: {{t+|de|Fang|m}}
@@ -186,7 +186,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 ##*: After about a kilometer I '''caught''' a taxi to Santa Croce.
 ## {{transitive|rare}} To become [[pregnant]]. (Only in past tense or as participle.) {{defdate|from 19th c.}}
 ##* '''2002''', Orpha Caton, ''Shadow on the Creek'', page 102-103, [url=http://books.google.com/books?id=GmLXMp0c3NMC|isbn1591602653]:
-##*: Had Nancy got '''caught''' with a child?  If so she would destroy her parent's dreams for her.
+##*: Had Nancy got '''caught''' with a child? If so she would destroy her parent's dreams for her.
 # To seize hold of.
 ## {{transitive|dated}} To [[grab]], [[seize]], take hold of. {{defdate|from 13th c.}}
 ##: ''I '''caught''' her by the arm and turned her to face me.''
@@ -296,10 +296,10 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 
 ====Translations====
 {{trans-top|to intercept an object in the air etc. {{jump|t|seize object}} }}
-* Arabic: {{t|ar|أمسك|tr='amsaka}},  {{t-|ar|مسك|tr=másaka}}
+* Arabic: {{t|ar|أمسك|tr='amsaka}}, {{t-|ar|مسك|tr=másaka}}
 * Armenian: {{t|hy|բռնել|tr=bṙnel|sc=Armn}}
 * [[Basque]]: {{t|eu|harrapatu}}
-* Bulgarian: {{t|bg|хващам}},  {{t|bg|улавям}}
+* Bulgarian: {{t|bg|хващам}}, {{t|bg|улавям}}
 * [[Cebuano]]: {{tø|ceb|dakup}}
 * Chinese:
 *: Mandarin: {{t-|cmn|捕|tr=bǔ|sc=Hani}}, {{t|cmn|抓住|tr=zhuāzhù|sc=Hani}}, {{t-|cmn|抓|tr=zhuā|sc=Hani}}
@@ -313,11 +313,11 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * Hebrew: {{t|he|תפס|tr=tafás}}
 * Hindi: {{t|hi|पकड़ना|tr=pakaṛnā|sc=Deva}}
 * Irish: {{t|ga|beir ar|xs=Irish}}
-* Japanese: {{t-|ja|捕まえる|tr=tsukamaeru}},  {{t|ja|捕る|tr=toru}}
+* Japanese: {{t-|ja|捕まえる|tr=tsukamaeru}}, {{t|ja|捕る|tr=toru}}
 * Korean: {{t+|ko|잡다|tr=japda|sc=Hang}}
 * Persian: {{t+|fa|گرفتن|tr=geraftan|xs=Persian}}
 * Romanian: {{t+|ro|prinde}}
-* Russian: {{t|ru|поймать|tr=pojmát'}} {{pf.}},  {{t+|ru|ловить|tr=lovít'}} {{impf}}
+* Russian: {{t|ru|поймать|tr=pojmát'}} {{pf.}}, {{t+|ru|ловить|tr=lovít'}} {{impf}}
 * Slovene: [[ujeti]]
 * Spanish: [[atajar]] {{qualifier|Latin America}}, [[cazar]] {{qualifier|football}}
 * Swedish: {{t|sv|fånga}}, {{t|sv|fatta}} {{qualifier|dated}}
@@ -333,7 +333,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * German: {{t+|de|verstehen}}, {{t+|de|begreifen}}
 * Hebrew: {{t|he|תפס|tr=tafás}}
 {{trans-mid}}
-* Russian: {{t|ru|схватывать|tr=sxvátyvat'}} {{impf}},  {{t|ru|схватить|tr=sxvatít'}} {{pf.}},  {{t+|ru|понимать|tr=ponimát'}} {{impf}},  {{t+|ru|понять|tr=ponját'}} {{pf.}},  {{t|ru|расслышать|tr=rasslýšat'}} {{pf.}} (be able to hear and catch something said correctly)
+* Russian: {{t|ru|схватывать|tr=sxvátyvat'}} {{impf}}, {{t|ru|схватить|tr=sxvatít'}} {{pf.}}, {{t+|ru|понимать|tr=ponimát'}} {{impf}}, {{t+|ru|понять|tr=ponját'}} {{pf.}}, {{t|ru|расслышать|tr=rasslýšat'}} {{pf.}} (be able to hear and catch something said correctly)
 * Slovene: [[ujeti]]
 * Spanish: {{qualifier|Chile, informal}} {{t+|es|cachar}}, {{t|es|captar}}, {{t|es|comprender}}
 * Swedish: {{t|sv|fatta}} {{qualifier|colloquial}}, {{t|sv|uppfatta}}
@@ -382,7 +382,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 {{wikipedia|lang=fr}}
 
 ===Etymology===
-From {{etyl|en|fr}} {{rfe}}
+From {{etyl|en|fr}}. {{etystub|lang=fr}}
 
 ===Noun===
 {{fr-noun-unc|m}}
