--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -95,7 +95,7 @@
 
 {{trans-top|colloquial: term of general disparagement}}
 * Bulgarian: {{t+|bg|духам|tr=dukham}}
-* Finnish: {{t+|fi|imeä}}, {{t+|fi|haista}}
+* Finnish: {{t+|fi|imeä}}, {{t+|fi|haista}}, {{t|fi|olla syvältä}}
 * French: [[être]] [[chiant]]
 * German: [[mies]] [[sein]], [[zum]] [[kotzen|Kotzen]] [[sein]], [[Scheiße]] [[sein]]
 * Hindi: (laayak)
