--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -23,7 +23,7 @@
 #: '''''Beautiful'''! I dropped the soup on the floor!''
 
 ====Usage notes====
-The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the superlatives '''[[beautifulest]]''' and '''[[beautifullest]]''' are also occasionally used but are considered incorrect by some.
+The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the superlatives '''[[beautifulest]]''' and '''[[beautifullest]]''' have also occasionally been used, but are considered dated or obsolete.
 
 ====Synonyms====
 * {{sense|possessing charm and attractive}} [[beauteous]], [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[sheen]], [[handsome]], [[hot]] {{qualifier|slang}}, [[lovely]], [[nice-looking]], [[pretty]], [[shapely]], [[fit]] {{qualifier|slang}}
