--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -64,6 +64,7 @@ If a man made structure is wider than it is long then it is probably a [[bridge]
 * [[Afrikaans]]: {{t-|af|brug|xs=Afrikaans}}
 * Albanian: {{t-|sq|urë|f|xs=Albanian}}
 * Arabic: {{t|ar|جسر|m|tr=jisr|sc=Arab}}, {{t|ar|كوبري|m|tr=kúbri|sc=Arab}}
+*: [[Egyptian Arabic]]: {{tø|arz|كوبري|m|tr=kobri|sc=Arab}}
 * Armenian: {{t+|hy|կամուրջ|tr=kamurǰ}}
 * [[Azeri]]: {{t+|az|körpü|xs=Azeri}}
 * [[Basque]]: {{t-|eu|zubi|xs=Basque}}
