--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -13,9 +13,8 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 {{en-verb}}
 
 # {{transitive}} to apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force
-# {{ambitransitive|slang}} to persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->; to succeed in finding a person with whom to have sex.
-#: ''He's '''pulled''' that bird over there.''
-#: ''I '''pulled''' at the club last night.''
+# {{transitive}} {{slang}} to persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->
+#: ''He's pulled that bird over there.''
 # {{transitive}} to [[remove]] (something), especially from public [[circulation]] or [[availability]]
 #: ''Each day, they pulled the old bread and set out fresh loaves.''
 # {{transitive|informal}} to [[do]] or [[perform]]
@@ -26,6 +25,8 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 #*: They'll go through their computer system and '''pull''' a report of all your order fulfillment records for the time period you specify.
 # {{intransitive}} to apply a force such that an object comes toward the person or thing applying the force
 #: ''You're going to have to pull harder to get that cork out of the bottle.''
+# {{intransitive|slang}} to succeed in finding a person with whom to have sex
+#: ''I '''pulled''' at the club last night.''
 # to toss a [[frisbee]] with the intention of launching the disc across the length of a field
 # {{intransitive}} to [[row]]
 #* '''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter VI
