--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -27,6 +27,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 ====Translations====
 {{trans-top|body tissue}}
 * Albanian: {{t|sq|mish|m}}, {{t|sq|tul|m}}
+* Arabic: {{t|ar|لحم|m|tr=laḥm|sc=Arab}}
 * Armenian: {{t+|hy|միս|tr=mis}}
 * [[Catalan]]: [[carn]] {{f}}
 * Danish: {{t+|da|kød}}
