--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -36,6 +36,13 @@
 ====Readings====
 * {{ja-readings|on=[[じゅん]] (jun), [[しゅん]] (shun)}}
 
+===Proper noun===
+{{ja-pos|k|proper|hira=ひとし|rom=Hisashi}}
+
+# {{given name|male|lang=ja}}
+
+[[Category:Japanese male given names|ひとし]]
+
 ----
 
 ==Korean==
