--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -12,7 +12,7 @@ From the root {{term|ש־ב־ע|שׁ־ב־ע|lang=he|tr=sh-v-`}}.
 # A [[week]]; a period of [[seven]] [[day]]s.
 
 ====Related terms====
-* {{onym|he|שבע|gloss=seven|tr=shéva}}
+* {{l|he|שבע|gloss=seven|tr=shéva}}
 
 [[el:שבוע]]
 [[es:שבוע]]
