--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -26,11 +26,11 @@
 #: ''Winter '''comes''' after autumn.''
 # {{intransitive}} {{slang}} {{alternative spelling of|[[cum]]}}  To achieve [[orgasm]].
 #: ''He '''came''' after a few minutes.''
-# {{copulative|figuratively}} (''with '''close''''') To [[approach]] a state of being or accomplishment.
-#: ''They '''came very close''' to leaving on time.''
-#: ''His test scores '''came close''' to perfect.''
-# {{figuratively}} (''with '''to''''') To take a particular [[approach]] or [[point of view]] in regard to something.
-#: ''He '''came to''' SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.''
+# {{copulative|figuratively|with ''close''}} To [[approach]] a state of being or accomplishment.
+#: ''They '''came''' very close to leaving on time.''
+#: ''His test scores '''came''' close to perfect.''
+# {{figuratively|with ''to''}} To take a particular [[approach]] or [[point of view]] in regard to something.
+#: ''He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.''
 # {{context|copulative|archaic}} To [[become]], to [[turn out]] to be.
 #: ''He was a dream '''come''' true.''
 
