--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -12,6 +12,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 {{en-noun|-}}
 
 # the soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
+# By extension, bare arms, bare legs, bare torso.
 # {{archaic}} [[animal|Animal]] tissue regarded as food; [[meat]].
 #* '''1485''', Thomas Malory, ''Le Morte Darthur'', Book XV:
 #*: I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne [...].
