--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -82,6 +82,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 <!-- Only colloquial expressions here! Add normal language terms to "circumcised" -->
 : ''See also:'' '''[[circumcised]]'''
 {{trans-mid}}
+* Russian: {{t|ru|обрезаный|sc=Cyrl|alt=обре́заный|tr=obrézanyj}}
 * Spanish: {{t|es|circuncidado}}
 {{trans-bottom}}
 
