--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -153,7 +153,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Kurdish: {{t+|ku|برین|sc=ku-Arab}}
 * Portuguese: {{t+|pt|corte|m}}
 * Romanian: {{t|ro|tăietură|f}}, {{t|ro|incizie|f}}
-* Russian: {{t|ru|порез|m|sc=Cyrl|alt=побре́з|tr=poréz}} ''wound'', {{t|ru|разрез|m|sc=Cyrl|alt=разре́з|tr=razréz}}
+* Russian: {{t|ru|порез|m|sc=Cyrl|alt=поре́з|tr=poréz}} ''wound'', {{t|ru|разрез|m|sc=Cyrl|alt=разре́з|tr=razréz}}
 * Swedish: {{t+|sv|skärsår|n}}
 * Turkish: {{t|tr|kesik}}
 {{trans-bottom}}
