--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -396,7 +396,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Portuguese: {{t+|pt|cortar}},  {{t|pt|incisar}}
 * Romanian: {{t-|ro|tăia}}
 * [[Romansch]]: {{t-|rm|tagliar|xs=Romansch}}
-* Russian: {{t+|ru|резать|tr=rézat’}}
+* Russian: {{t+|ru|резать|alt=ре́зать|tr=rézat’}} {{impf}}, {{t|ru|порезать|alt=поре́зать|tr=porézat’}} {{pf}}
 * Spanish: {{t+|es|cortar}},  {{t-|es|incidir}}
 * Swedish: {{t+|sv|skära}}
 * Turkish: {{t+|tr|kesmek}}
@@ -429,7 +429,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Portuguese: {{t+|pt|cortar}}
 * Romanian: {{t-|ro|tăia}}
 * [[Romansch]]: {{t-|rm|tagliar|xs=Romansch}}
-* Russian: {{t|ru|разрезать|tr=razrézat’}} {{pf.}}, {{t|ru|разрезать|tr=razrezát’}} {{impf}}
+* Russian: {{t|ru|разрезать|alt=разреза́ть|tr=razrezát’}} {{impf}}, {{t|ru|разрезать|alt=разре́зать|tr=razrézat’}} {{pf}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t|sv|skära}} (''with knife''), {{t|sv|klippa}} (''with scissors'')
 {{trans-bottom}}
@@ -493,6 +493,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Icelandic: {{t|is|skera niður}}
 * Japanese: {{t+|ja|減らす}} ({{t+|ja|へらす}}, herasu), {{t-|ja|削減する}} ({{t+|ja|さくげんする}}, sakugen suru), {{t+|ja|カットする}} (katto suru)
 * Portuguese: {{t+|pt|diminuir}},  {{t|pt|reduzir}}
+* Russian: {{t|ru|урезать|alt=уреза́ть|tr=urezát’}} {{impf}}, {{t|ru|урезать|alt=уре́зать|tr=urézat’}} {{pf}}
 * Spanish: {{t-|es|recortar}}
 {{trans-bottom}}
 
@@ -502,6 +503,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Finnish: {{t+|fi|leikata}}, {{t+|fi|hioa}}
 {{trans-mid}}
 * Portuguese: {{t|pt|talhar|m}}
+* Russian: {{t|ru|вырезать|alt=выреза́ть|tr=vyrezát’}} {{impf}}, {{t|ru|вырезать|alt=выре́зать|tr=vyrézat’}} {{pf}}
 * Spanish: {{t+|es|tallar}}
 {{trans-bottom}}
 
@@ -513,6 +515,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 {{trans-mid}}
 * German: {{t+|de|schneiden}}, {{t+|de|trennen}}
 * Portuguese: {{t+|pt|atravessar}}
+* Russian: {{t|ru|разрезать|alt=разреза́ть|tr=razrezát’}} {{impf}}, {{t|ru|разрезать|alt=разре́зать|tr=razrézat’}} {{pf}}
 * Spanish: {{t-|es|atravesar}}
 {{trans-bottom}}
 
