--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -44,7 +44,7 @@
 * Russian: {{t+|ru|фетр|m|tr=fetr|sc=Cyrl}}, {{t|ru|войлок|m|tr=vójlok|sc=Cyrl}}
 * Spanish: {{t-|es|fieltro|m}}
 * Swedish: {{t+|sv|filt|c}}
-* Turkish: {{t|tr|keçe}}, {{t|tr|fötr}}, {{t|tr|kiyiz}}
+* Turkish: {{t|tr|aba}}, {{t|tr|keçe}}, {{t|tr|fötr}}, {{t|tr|kiyiz}}
 {{trans-bottom}}
 
 {{trans-top|hat made of felt}}
