--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -64,6 +64,13 @@
 |tuttle= 3b4.8
 }}
 
+===Proper noun===
+{{ja-pos|k|proper|hira=ひとし|rom=Hitoshi}}
+
+# {{given name|male|lang=ja}}
+
+[[Category:Japanese male given names|ひとし]]
+
 ----
 
 ==Korean==
