--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -98,7 +98,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt), {{t-|km|ល្អ|tr=l'ɑɑ|sc=Khmr|xs=Khmer}}
 * Korean: {{qualifier|attributive}} {{t|ko|아름다운|tr=areumdaun|sc=Kore}}, {{qualifier|predicative}} {{t|ko|아름답다|tr=areumdapda|sc=Kore}}
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
-* Lao: {{t|lo|ງາມ|tr=ŋáːm|sc=Laoo}}
+* Lao: {{t|lo|ງາມ|tr=ngaam|sc=Laoo}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Limburgish]]: {{t-|li|sjoen|xs=Limburgish}}
 * [[Lojban]]: {{t-|jbo|melbi|xs=Lojban}}
