--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -60,7 +60,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Polish: {{t|pl|zasłona|f}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Romanian: {{t-|ro|perdea|f}}, {{t|ro|draperie|f}}, [[perdele]] {{f|p}}
-* Russian: {{t+|ru|штора|f|tr=štóra}}, {{t+|ru|занавеска|f|tr=zanav'éska}}, {{t|ru|гардина|f|tr=gardína|sc=Cyrl}}
+* Russian: {{t+|ru|штора|f|tr=štóra}}, {{t+|ru|занавеска|f|tr=zanavéska}}, {{t|ru|гардина|f|tr=gardína|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t|gd|cùirtear|m}}
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{t|sh|завеса|f|alt=за̑веса|sc=Cyrl|xs=Serbo-Croatian}}, (''Ijekavian'') {{t|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl|xs=Serbo-Croatian}}; {{t|sh|застор|m|alt=за́стор|sc=Cyrl|xs=Serbo-Croatian}}
@@ -92,7 +92,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-mid}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Romanian: {{t|ro|cortină|f}}
-* Russian: {{t+|ru|занавес|m|tr=zánav'es}}
+* Russian: {{t+|ru|занавес|m|tr=zánaves}}
 * [[Scottish Gaelic]]: {{t|gd|cùirtear|m}}
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{t|sh|завеса|f|alt=за̑веса|sc=Cyrl|xs=Serbo-Croatian}}, (''Ijekavian'') {{t|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl|xs=Serbo-Croatian}} ; {{t|sh|застор|m|alt=за́стор|sc=Cyrl|xs=Serbo-Croatian}}
