--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -301,6 +301,7 @@
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|играти|alt=и̏грати|sc=Cyrl|xs=Serbo-Croatian}}
 *: Roman: {{t|sh|igrati|alt=ȉgrati|xs=Serbo-Croatian}}
+* [[Sicilian]]: {{t|scn|giucari}}
 * Slovak: [[hrať sa]]
 * Slovene: {{t+|sl|igrati se}}
 * Spanish: {{t+|es|jugar}}
