--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -62,6 +62,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Serbian: {{t|sr|zbljuvati}}, {{t|sr|povratiti}}, {{t-|sr|bljuvati}}, {{t-|sr|povraćati}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|повратити|tr=povratiti|sc=Cyrl}}
+*: Latin: {{t|sh|rigati}}
 * Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}
 * Swahili: {{t|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}
