--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -1,10 +1,7 @@
 {{also|Appendix:Variations of "eg"}}
 ==English==
 
-===Alternative forms===
-* [[eg]]
-* [[eg.]] (informal)
-* [[ex. gr.]]
+what is the deinaition to e.g.
 
 ===Etymology===
 Abbreviation of {{etyl|la}} {{term|exempli gratia|exemplī grātiā|lang=la|for example}}. ''Gratiā'' here is in the ablative case which is translated into the prepositional phrase "for the sake". ''Exempli'' is a genitive case noun meaning "of example". Therefore, the full phrase is "for the sake of example".<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 9780553590128.</ref> Previously abbreviated to ''ex. gr.''
