--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -56,6 +56,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * Dutch: {{t+|nl|rok|m}}
 * Esperanto: {{t-|eo|jupo|xs=Esperanto}}
 * Estonian: {{t|et|hõlm}}
+* Faroese: {{t|fo|skjúrt|n}}
 * Finnish: {{t+|fi|hame}}
 * French: {{t+|fr|jupe|f}}
 * [[Galician]]: {{t|gl|saia|f}}
@@ -100,8 +101,10 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 
 {{trans-top|part of dress}}
 * Croatian: {{t+|hr|suknja|f|alt=sȕknja}}
+* Danish: {{t|da|nederdel|c}}
 * Dutch: {{t+|nl|rok|m}}
 * Esperanto: {{t-|eo|jupo|xs=Esperanto}}
+* Faroese: {{t|fo|niðurpartur|m}}
 * Finnish: {{t+|fi|hame}}
 * French: {{t+|fr|jupe|f}}
 * German: {{t+|de|Rock|m}}
